[package]
name = "graphe"
version = "0.1.0"
authors = ["Victor Barua <victor.barua@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
